(added) - made bubble block align icon block correctly when in a inlinelist block with --iconlist modifier

--- a/assets/styles/block/_inlinelist.scss
+++ b/assets/styles/block/_inlinelist.scss
@@ -78,6 +78,8 @@
 
 .inlinelist--iconlist {
 	.inlinelist__item {
+		line-height: 60px;
+		font-size: 40px;
 		width: 60px;
 		& + .inlinelist__item {
 			margin-left: 10px;
