--- a/css/main.css
+++ b/css/main.css
@@ -1615,9 +1615,11 @@ This is a "icon" module.
 
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/workspace\/frost\.noerd\.dk\/assets\/styles\/block\/_inlinelist\.scss}line{font-family:\0000380}}
 .inlinelist--iconlist .inlinelist__item {
+  line-height: 60px;
+  font-size: 40px;
   width: 60px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/workspace\/frost\.noerd\.dk\/assets\/styles\/block\/_inlinelist\.scss}line{font-family:\0000382}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/workspace\/frost\.noerd\.dk\/assets\/styles\/block\/_inlinelist\.scss}line{font-family:\0000384}}
 .inlinelist--iconlist .inlinelist__item + .inlinelist__item {
   margin-left: 10px;
 }
